added swagger to books
